# textype

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
docs/: CODEBASE_DOCUMENTATION.md  CODE_FLOW_DOCUMENTATION.md  map_keys.py  textype_flows.dot  textype_flows_simple.dot  textype_function_flow.dot
src/textype/: __about__.py  __init__.py  algorithms_generator.py  code_generator.py  config.py  curriculum.py  generator_algorithms.py  keyboard.py  main.py  models.py  sentence_generator.py  styles.tcss  text_normalizer.py  widgets.py  xkb_resolver.py
src/textype/test/: test.py
tests/: test_algorithms_generator.py  test_code_generator.py  test_curriculum.py  test_keyboard.py  test_models.py  test_sentence_generator.py  test_text_normalizer.py  test_widgets.py  test_xkb_resolver.py
